# computer-graphics

./: .gitignore  02-ex5dbc3ef862.ipynb  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  bunny_small  bvh_moller  cmake_install.cmake  consts_only  profile.py  result.ppm  test.cpp  test.h  vanilla
Assignment 1/: README.md
Assignment 2/: README.md
Assignment 2/code/: main.cpp
Assignment 3/: README.md
Assignment 3.1/: README.md
Assignment 3.1/code/: main.cpp
Assignment 3/code/: main.cpp  prg
Assignment 4/: README.md
Assignment 4/code/: Material.h  main.cpp
Assignment 5/: README.md
Assignment 5/code/: geometry.js  shader.js  shapes.js  template.html
Assignment 6/: README.md
Assignment 6/template/: shader.js  template.html
Bonus 3/: README.md
Bonus 3/code/: main.cpp
Bonus1/: timings.md
Bonus1/code/: bvh  main.cpp  ray_math.h  result.ppm
Bonus1/code/bvh_moller/: light.h  material.h  mesh.h  object.h
Bonus1/code/consts_only/: image.h  light.h  mesh.h  object.h
Bonus1/code/vanilla/: image.h  light.h  mesh.h  object.h
Rendering Competition/: Report.md
Rendering Competition/code/: Material.h  main  main.cpp  result.ppm
Rendering Competition/code2/: Material.h  main.cpp
src/: main.cpp
